@@ -26,7 +26,6 @@ public class TestCtrlSolucions {
     private CtrlPersistenciaSolucio cps;
     private ArrayList<Double> similituds0 = new ArrayList<>();
     private ArrayList<Double> similituds1 = new ArrayList<>();
-    private ArrayList<String> productes = new ArrayList<String>();
     private ArrayList<Producte> productesLit = new ArrayList<Producte>();
     private double[][] matriuSim = {{0.0, 0.5},{0.5, 0.0}};
 
@@ -171,6 +170,8 @@ public class TestCtrlSolucions {
             when(producteMock.getNom()).thenReturn("p" + i);
             productesLit.add(producteMock);
         }
+        when(c.getNomProd_index(0)).thenReturn("p0");
+        when(c.getNomProd_index(1)).thenReturn("p1");
         when(c.getCataleg()).thenReturn(productesLit);
         when(c.getMatriuSimilituds()).thenReturn(matriuSim);
 
@@ -204,6 +205,8 @@ public class TestCtrlSolucions {
         }
         when(c.getCataleg()).thenReturn(productesLit);
         when(c.getMatriuSimilituds()).thenReturn(matriuSim);
+        when(c.getNomProd_index(0)).thenReturn("p0");
+        when(c.getNomProd_index(1)).thenReturn("p1");
 
         try {
         gs.gestioAlgorisme("greedy");
@@ -240,6 +243,8 @@ public class TestCtrlSolucions {
         }
         when(c.getCataleg()).thenReturn(productesLit);
         when(c.getMatriuSimilituds()).thenReturn(matriuSim);
+        when(c.getNomProd_index(0)).thenReturn("p0");
+        when(c.getNomProd_index(1)).thenReturn("p1");
 
         try {
         gs.creaSolucio("Solucio1",4);
@@ -278,8 +283,8 @@ public class TestCtrlSolucions {
         }
         when(c.getCataleg()).thenReturn(productesLit);
         when(c.getMatriuSimilituds()).thenReturn(matriuSim);
-        when(c.getProd_index(0)).thenReturn(productesLit.get(0));
-        when(c.getProd_index(1)).thenReturn(productesLit.get(1));
+        when(c.getNomProd_index(0)).thenReturn("p0");
+        when(c.getNomProd_index(1)).thenReturn("p1");
 
         try{
         gs.creaSolucio("Solucio1", 4);
@@ -323,7 +328,6 @@ public class TestCtrlSolucions {
         }
         when(c.getCataleg()).thenReturn(productesLit);
         when(c.getMatriuSimilituds()).thenReturn(matriuSim);
-
         when(c.getNomProd_index(0)).thenReturn("p0");
         when(c.getNomProd_index(1)).thenReturn("p1");
 
@@ -334,8 +338,9 @@ public class TestCtrlSolucions {
         }catch (FormatInputNoValid e) {
             System.out.println(e.getMessage());
         }
+
         try {
-            gs.modificarSolucio(productesLit.get(0).getNom(), productesLit.get(1).getNom(), "Solucio1");
+            gs.modificarSolucio("p1", "p0", "Solucio1");
         }catch (IntercanviNoValid e){
         System.out.println(e.getMessage());
         }catch (NomSolucioNoValid e) {
@@ -344,14 +349,14 @@ public class TestCtrlSolucions {
         System.out.println(e.getMessage());
         }
 
-        Solucio solFi = gs.getSolucions().getFirst();
+        ArrayList<ArrayList<String>> solFi = gs.getSolucions().getFirst().getSolucio();
 
         assertEquals("Verificar nom","Solucio1", gs.getSolucions().getFirst().getNom());
         assertEquals("Verificar numero de prestatges",1, gs.getSolucions().getFirst().getSolucio().size());
         assertEquals("Verificar numero de productes",2, gs.getSolucions().getFirst().getSolucio().getFirst().size());
         assertEquals("Verificar mida solucions",1, gs.getSolucions().size());
-        assertEquals("Verificar primer intercanvi", "p1", solFi.getSolucio().getFirst().get(0));
-        assertEquals("Verificar segon intercanvi", "p0", solFi.getSolucio().getFirst().get(1));
+        assertEquals("Verificar primer intercanvi", "p1", solFi.getFirst().get(0));
+        assertEquals("Verificar segon intercanvi", "p0", solFi.getFirst().get(1));
     }
 
     /**
@@ -450,6 +455,8 @@ public class TestCtrlSolucions {
         }
         when(c.getCataleg()).thenReturn(productesLit);
         when(c.getMatriuSimilituds()).thenReturn(matriuSim);
+        when(c.getNomProd_index(0)).thenReturn("p0");
+        when(c.getNomProd_index(1)).thenReturn("p1");
 
         try {
         gs.creaSolucio("Solucio1", 4);
